# Rythe-Core

./: .clang_complete  .gitignore  .gitmodules  .rythe_project  AUTHORS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  build-core.lua  core.lua  include-core.lua
.github/workflows/: analyze.yml  build.yml
applications/: CMakeLists.txt
applications/sandbox/: CMakeLists.txt  main.cpp
src/core/: build-core.lua  core.hpp  include-core.lua
src/core/assets/: asset.hpp  assetcache.hpp  assetloader.hpp  assets.hpp  assets.inl  functionalbinds.hpp  functionalbinds.inl  import_settings.hpp
src/core/async/: async.hpp  async_operation.cpp  async_operation.hpp  async_runnable.hpp  job_pool.cpp  job_pool.hpp  lock_guard.hpp  ring_sync_lock.hpp  rw_spinlock.cpp  rw_spinlock.hpp  spinlock.cpp  spinlock.hpp  thread_util.hpp  transferable_atomic.hpp  wait_priority.hpp
src/core/common/: common.hpp  exception.hpp  hash.cpp  hash.hpp  hash.inl  inteface_traits.hpp  managed_resource.hpp  result.hpp  string_extra.hpp  string_literal.hpp  unit_conversion.hpp
src/core/compute/: buffer.cpp  buffer.hpp  context.cpp  context.hpp  kernel.cpp  kernel.hpp  program.cpp  program.hpp
src/core/containers/: atomic_sparse_map.hpp  containers.hpp  data_view.hpp  data_view.inl  delegate.hpp  hashed_sparse_set.hpp  iterator_tricks.hpp  pointer.hpp  shared_data_view.hpp  shared_data_view.inl  sparse_map.hpp  sparse_set.hpp  vector_view.hpp
src/core/data/: data.hpp  image.cpp  image.hpp  image.inl  mesh.cpp  mesh.hpp
src/core/defaults/: coremodule.hpp  defaultcomponents.hpp
src/core/ecs/: ecs.hpp  registry.cpp  registry.hpp  registry.inl
src/core/engine/: engine.cpp  engine.hpp  engine.inl  enginesubsystem.hpp  enginesubsystem.inl  module.hpp  module.inl  system.cpp  system.hpp  system.inl
src/core/entry/: entry_point.hpp
src/core/events/: defaultevents.cpp  defaultevents.hpp  event.hpp  eventbus.cpp  eventbus.hpp  eventbus.inl  events.hpp
src/core/filesystem/: artifact_cache.cpp  artifact_cache.hpp  assetimporter.cpp  assetimporter.hpp  basic_resolver.hpp  filemanip.cpp  filemanip.hpp  filesystem.hpp  filesystem_resolver.cpp  filesystem_resolver.hpp  mem_filesystem_resolver.cpp  mem_filesystem_resolver.hpp  navigator.cpp  navigator.hpp  provider_registry.cpp  provider_registry.hpp  resource.hpp  view.cpp  view.hpp
(+70 files in other folders)
